@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

hide circle
hide methods


class Address{
    streetAddress
    state
    zipCode
}

class Property {
    price
    area
    distanceToCentre
}

class Photographs{
uri
}

class Inhabitable {
    bedroomNumber
    bathroomNumber
    parkingSpaces
    hasEquipment
}


class House {
    hasBasement
    hasLoft
    sunExposure
}



class Store{
id
designation
address
email
phoneNumber

}

class PropertyType {
    description
}

class BusinessType {
    description
}

class Announcement {
    announcementRequest
    listedPrice
    rentDuration
    agent
    date
    commission
}

class VisitRequest{
    preferred date
    time slot
    wasAccepted
}

class Client {
    email
    name
    passportNumber
    taxNumber
    phoneNumber
}

class Employee{
    email
    name
    passportNumber
    taxNumber
    telephoneNumber
}

class Agent{
}

Client "1" -- "*" Agent : request response from >
VisitRequest "*" -- "1" Property : refers to >
Employee "1" --- "1"Agent : is a <
Agent "*" -- "1" VisitRequest : related to >
Property "1"--"1" Address : refers to <
Property "1"<|--"1" Inhabitable : is a

Property "*" -- "1..30" Photographs: has >
Inhabitable "1"<|--"1" House : is a
PropertyType "1" -- "*" Property: cataloged as <
BusinessType "1" -- "*" Announcement: cataloged as <
Announcement "1" - "1" Property : listed under <
Property "*" - "1" Store: listed under >


@enduml